--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "vs-code",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,6 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.31.0",
+    "dotenv": "^10.0.0"
   }
 }
